# conversational-search

./: .env.example  .gitignore  README.md  braintrust_scorers.py  pyproject.toml
.github/workflows/: run_on_schedule.yml
docs/plans/: 2025-11-25-conversational-search-design.md  2025-11-25-conversational-search-implementation.md
evals/: __init__.py  dataset_generator.py  dataset_manager.py  remote_eval.py  run_evals.py  run_evals_v2.py  simple_eval.py  test_eval_small.py
evals/scorers/: MULTI_MODEL_USAGE.md  REFACTORING_GUIDE.md  __init__.py  answer_completeness.py  answer_completeness_v2.py  base_evaluator.py  citation_quality.py  factual_accuracy.py  factual_accuracy_v2.py  retrieval_quality.py
scripts/: production_demo.py
src/: __init__.py  agent.py  chat.py  state.py  synthesis.py  tools.py
